--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 	</div>
 	</div>
 	<div class="doboz">
-		<a href="https://www.youtube.com/watch?v=uG45me0ekts" style="text-decoration: line-through" target="_blank">
+		<a href="https://blackburna.github.io/NYOMTATAS/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/amongus.png">
-				<p>
+				<img src="kepek/nyomtato.png">
+				<p>Nyomtatás
 				</p>
 		</a>
 	</div>
