--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfólió</title>
 	<link rel="stylesheet" href="stilus.css" type="text/css">
-	<link rel="shortcut icon" href="kepek/monogram.png" type="image/x-icon">
+	<link rel="icon" type="image/x-icon" href="kepek/monogram.png">
 	<style>
 		body {
 			font-family: Arial, Helvetica, sans-serif;
@@ -109,7 +109,13 @@
 		</a>
 	</div>
 	</div>
-
+	<div class="doboz">
+		<a href="https://blackburna.github.io/BUSOJARAS/" style="text-decoration: none;" target="_blank">
+			<div class="tartalom">
+				<img src="kepek/busojaras.png">
+				<p>Busójárás
+				</p>
+		</a>
 	<body>
 
 </html>
