--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/MATRA/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/ERDO.png">
+				<img src="kepek/erdo.png">
 				<p>Kiadó nyaraló mátrában
 				</p>
 		</a>
