--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
 		</a>
 	</div>
 	</div>
+	<div class="doboz">
+		<a href="https://blackburna.github.io/JSALAPOK/" style="text-decoration: none;" target="_blank">
+			<div class="tartalom">
+				<img src="kepek/jsalapok.png">
+				<p>JavaScript alapok
+				</p>
+		</a>
+	</div>
+	</div>
 	<body>
 
 </html>
