--- a/index.html
+++ b/index.html
@@ -4,47 +4,30 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfólió</title>
+	<title>Munkák</title>
 	<link rel="stylesheet" href="stilus.css" type="text/css">
 	<link rel="icon" type="image/x-icon" href="kepek/monogram.png">
-	<style>
-		body {
-			font-family: Arial, Helvetica, sans-serif;
-		}
-
-		a {
-			text-decoration: none;
-			display: inline-block;
-			padding: 8px 16px;
-		}
-
-		a:link {
-			color: white;
-		}
-
-		a:visited {
-			color: rgba(224, 218, 218, 0.212);
-		}
-	</style>
 </head>
 
 <body>
-	<div id="oldalak" class="hatterkep">
-	</div>
-	<div class="topnav">
-		<a class="active" href="https://www.facebook.com/BlackburnRR/" target="_blank">Facebook</a>
-		<a href="https://twitter.com/blackburn_cs" target="_blank">Twitter</a>
-		<a href="https://www.youtube.com/channel/UC1ohXJnGs085IcI_4Jl8ROA" target="_blank">Youtube</a>
+	<nav class="nav">
+		<div class="container">
+			<div class="logo">
+				<a href="https://blackburna.github.io/magyarportfolio/" target="_blank">Fordítások</a>
+				<a href="https://www.facebook.com/BlackburnRR/" target="_blank">Facebook</a>
+				<a href="https://twitter.com/blackburn_cs" target="_blank">Twitter</a>
+				<a href="https://www.youtube.com/channel/UC1ohXJnGs085IcI_4Jl8ROA" target="_blank">Youtube</a>
+	</nav>
 	</div>
 	<div class="csest">
-	<div class="doboz">
-		<a href="https://blackburna.github.io/MATRA/" style="text-decoration: none;" target="_blank">
-			<div class="tartalom">
-				<img src="kepek/erdo.png">
-				<p>Kiadó nyaraló mátrában
-				</p>
-		</a>
-	</div>
+		<div class="doboz">
+			<a href="https://blackburna.github.io/MATRA/" style="text-decoration: none;" target="_blank">
+				<div class="tartalom">
+					<img src="kepek/erdo.png">
+					<p>Kiadó nyaraló mátrában
+					</p>
+			</a>
+		</div>
 	</div>
 	<div class="doboz">
 		<a href="https://blackburna.github.io/NAPELEM/" style="text-decoration: none;" target="_blank">
@@ -145,6 +128,15 @@
 		</a>
 	</div>
 	</div>
+	<div class="doboz">
+	<a href="https://bendeguz989.github.io/MAVEN/" style="text-decoration: none;" target="_blank">
+		<div class="tartalom">
+			<img src="kepek/maven.png">
+			<p>MAVEN projekt /w bendeguz989
+			</p>
+	</a>
+</div>
+</div>
 	<body>
 
 </html>
