--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<title>Munkák</title>
 	<link rel="stylesheet" href="stilus.css" type="text/css">
 	<link rel="icon" type="image/x-icon" href="kepek/monogram.png">
 </head>
-
 <body>
-	<nav class="nav">
+	<header class="w3-container w3-theme w3-padding" id="myHeader">
+	<div class="w3-padding-32">
 		<div class="container">
-			<div class="logo">
-				<a href="https://blackburna.github.io/magyarportfolio/" target="_blank">Fordítások</a>
-				<a href="https://www.facebook.com/BlackburnRR/" target="_blank">Facebook</a>
-				<a href="https://twitter.com/blackburn_cs" target="_blank">Twitter</a>
-				<a href="https://www.youtube.com/channel/UC1ohXJnGs085IcI_4Jl8ROA" target="_blank">Youtube</a>
-	</nav>
+			<div class="wrapper"><div id="fixedbtn"><button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id01').style.display='block'"> <a href="https://blackburna.github.io/magyarportfolio/" target="_blank">Fordítások</a>
+		<div id="asd"><button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id02').style.display='block'"> <a href="https://www.facebook.com/BlackburnRR/" target="_blank">Facebook</a>
+		<div id="fixedbtn"><button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id03').style.display='block'"> <a href="https://twitter.com/blackburn_cs" target="_blank">Twitter</a>
+		<div id="fixedbtn"><button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id03').style.display='block'"> <a href="https://www.youtube.com/channel/UC1ohXJnGs085IcI_4Jl8ROA" target="_blank">Youtube</a></button>
+		</div>
 	</div>
+</div>
 	<div class="csest">
 		<div class="doboz">
 			<a href="https://blackburna.github.io/MATRA/" style="text-decoration: none;" target="_blank">
 				<div class="tartalom">
-					<img src="kepek/erdo.png">
+					<img src="kepek/erdo.png" style="width:60%">
 					<p>Kiadó nyaraló mátrában
 					</p>
 			</a>
@@ -32,7 +33,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/NAPELEM/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/napelem.png">
+				<img src="kepek/napelem.png" style="width:60%">
 				<p>Napelemes rendszerek
 				</p>
 		</a>
@@ -41,7 +42,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/CITRUSFELEK/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/citrom.png">
+				<img src="kepek/citrom.png" style="width:60%">
 				<p>Citrusfélék
 				</p>
 		</a>
@@ -50,7 +51,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/TUZTOVIS/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/tovis.png">
+				<img src="kepek/tovis.png" style="width:60%">
 				<p>Tűztövis
 				</p>
 		</a>
@@ -59,7 +60,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/TISZA/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/tiszto.png">
+				<img src="kepek/tiszto.png" style="width:60%">
 				<p>Tisza-tó
 				</p>
 		</a>
@@ -68,7 +69,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/CSUDIJO/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/etterem.png">
+				<img src="kepek/etterem.png" style="width:60%">
 				<p>Csudijó étterem
 				</p>
 		</a>
@@ -77,7 +78,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/VOYAGER/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/voyager.png">
+				<img src="kepek/voyager.png" style="width:60%">
 				<p>Voyager
 				</p>
 		</a>
@@ -86,7 +87,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/NYOMTATAS/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/nyomtato.png">
+				<img src="kepek/nyomtato.png" style="width:60%">
 				<p>Nyomtatás
 				</p>
 		</a>
@@ -95,7 +96,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/BUSOJARAS/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/busojaras.png">
+				<img src="kepek/busojaras.png" style="width:60%">
 				<p>Busójárás
 				</p>
 		</a>
@@ -104,7 +105,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/PASSZIVHAZ/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/passzivhaz.png">
+				<img src="kepek/passzivhaz.png" style="width:60%">
 				<p>Passzívház
 				</p>
 		</a>
@@ -113,7 +114,7 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/SARKANYHAJOZAS/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/sarkanyhajozas.png">
+				<img src="kepek/sarkanyhajozas.png" style="width:60%">
 				<p>Sárkányhajózás
 				</p>
 		</a>
@@ -122,21 +123,22 @@
 	<div class="doboz">
 		<a href="https://blackburna.github.io/JSALAPOK/" style="text-decoration: none;" target="_blank">
 			<div class="tartalom">
-				<img src="kepek/jsalapok.png">
+				<img src="kepek/jsalapok.png" style="width:60%">
 				<p>JavaScript alapok
 				</p>
 		</a>
 	</div>
 	</div>
 	<div class="doboz">
-	<a href="https://bendeguz989.github.io/MAVEN/" style="text-decoration: none;" target="_blank">
-		<div class="tartalom">
-			<img src="kepek/maven.png">
-			<p>MAVEN projekt /w bendeguz989
-			</p>
-	</a>
-</div>
-</div>
+		<a href="https://bendeguz989.github.io/MAVEN/" style="text-decoration: none;" target="_blank">
+			<div class="tartalom">
+				<img src="kepek/maven.png" style="width:60%">
+				<p>MAVEN projekt /w bendeguz989
+				</p>
+		</a>
+	</div>
+	</div>
+
 	<body>
 
 </html>
