--- a/forditasok.html
+++ b/forditasok.html
@@ -88,6 +88,14 @@
 		<div class="w3-row-padding w3-center w3-margin-left">
 			<div class="w3-padding-32">
 				<div class="w1-card w3-container" style="min-height:300px">
+					<h3 style="font-size:1.6vw;"><a href="https://www.paradoxinteractive.com/games/victoria-3/about" class="keplink" target="_blank">Victoria 3 (fordító)</a></h3>
+					<a href="kepek/tarkovford.png" target="_blank"><img src="kepek/vicky3.jpg"style="width:60%">
+				</div>
+			</div>
+		</div>
+		<div class="w3-row-padding w3-center w3-margin-left">
+			<div class="w3-padding-32">
+				<div class="w1-card w3-container" style="min-height:300px">
 					<h3 style="font-size:1.6vw;"><a href="https://www.escapefromtarkov.com/" class="keplink" target="_blank">Escape From Tarkov (korrektor, fordító)</a></h3>
 					<a href="kepek/tarkovford.png" target="_blank"><img src="kepek/tarkov.jpg"style="width:60%">
 				</div>
