--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<p><p>
 							<a>Név: <a href="https://github.com/blackburna" class="linkek" target="_blank">Jancsik István Péter</a>
 							<br><br>
-							Életkor: <a href="https://www.facebook.com/BlackburnRR/about_contact_and_basic_info" class="linkek" target="_blank">21</a>
+							Életkor: <a href="https://www.facebook.com/BlackburnRR/about_contact_and_basic_info" class="linkek" target="_blank">23</a>
 							<br><br>
 							Születési hely: <a href="https://hu.wikipedia.org/wiki/Ny%C3%ADregyh%C3%A1za"
 							class="linkek" target="_blank">Nyíregyháza</a>
@@ -70,7 +70,7 @@
 							<br><br>
 							Steam profil: <a href="https://steamcommunity.com/id/blackyke" class="linkek" target="_blank">Blackburn</a>
 							<br><br>
-							Instagram: <a href="https://www.instagram.com/Akenrutin/" class="linkek" target="_blank">Akenrutin</a>
+							Instagram: <a href="https://www.instagram.com/blackburn_cs/" class="linkek" target="_blank">Blackburn_cs/</a>
 							<br><br>
 							E-mail: <a
 								href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=isjanxs@gmail.com"
