--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 		<div class="w3-row-padding w3-center w3-margin-left">
 			<div class="w3-padding-32">
 				<div class="w1-card w3-container" style="min-height:300px">
-					<h3 style="font-size:1.6vw;"><a href="https://www.paradoxinteractive.com/games/victoria-3/about" class="keplink" target="_blank">Victoria 3 (fordító)</a></h3>
-					<a href="kepek/tarkovford.png" target="_blank"><img src="kepek/vicky3.jpg"style="width:60%">
+					<h3 style="font-size:1.6vw;"><a href="https://www.paradoxinteractive.com/games/victoria-3/about" class="keplink" target="_blank">Victoria 3 jelenleg folyamatban... 2% (fordító)</a></h3>
+					<img src="kepek/vicky3.jpg"style="width:60%">
 				</div>
 			</div>
 		</div>
