--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<br><br>
 							Steam profil: <a href="https://steamcommunity.com/id/blackyke" class="linkek" target="_blank">Blackburn</a>
 							<br><br>
-							Instagram: <a href="https://www.instagram.com/blackburn_cs/" class="linkek" target="_blank">Blackburn_cs/</a>
+							Instagram: <a href="https://www.instagram.com/blackburn_cs/" class="linkek" target="_blank">Blackburn_cs</a>
 							<br><br>
 							E-mail: <a
 								href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=isjanxs@gmail.com"
@@ -88,7 +88,7 @@
 		<div class="w3-row-padding w3-center w3-margin-left">
 			<div class="w3-padding-32">
 				<div class="w1-card w3-container" style="min-height:300px">
-					<h3 style="font-size:1.6vw;"><a href="https://www.paradoxinteractive.com/games/victoria-3/about" class="keplink" target="_blank">Victoria 3 jelenleg folyamatban... 2% (fordító)</a></h3>
+					<h3 style="font-size:1.6vw;"><a href="https://magyaritasok.hu/games/victoria-3" class="keplink" target="_blank">Victoria 3 jelenleg folyamatban... 2% (fordító)</a></h3>
 					<a href="kepek/vicky3ford.jpg" target="_blank"><img src="kepek/vicky3.jpg"style="width:60%">
 				</div>
 			</div>
@@ -96,7 +96,7 @@
 		<div class="w3-row-padding w3-center w3-margin-left">
 			<div class="w3-padding-32">
 				<div class="w1-card w3-container" style="min-height:300px">
-					<h3 style="font-size:1.6vw;"><a href="https://www.escapefromtarkov.com/" class="keplink" target="_blank">Escape From Tarkov (korrektor, fordító)</a></h3>
+					<h3 style="font-size:1.6vw;"><a href="https://magyaritasok.hu/games/escape-from-tarkov" class="keplink" target="_blank">Escape From Tarkov (korrektor, fordító)</a></h3>
 					<a href="kepek/tarkovford.png" target="_blank"><img src="kepek/tarkov.jpg"style="width:60%">
 				</div>
 			</div>
